Migrated. Need to port the Makefile.

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,2 +1,2 @@
-h1= title
-p Welcome to #{title}
+script(rel='stylesheet', src="/javascripts/libs-0001.js", async="async")
+script(rel='stylesheet', src="/javascripts/app-0004.js", async="async")
