working progress new release

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,2 +1,2 @@
-script(rel='stylesheet', src="/javascripts/libs-0001.js", async="async")
-script(rel='stylesheet', src="/javascripts/app-0004.js", async="async")
+script(rel='stylesheet', src="/javascripts/libs-" + assets.libs + ".js", async="async")
+script(rel='stylesheet', src="/javascripts/app-" + assets.app + ".js", async="async")
