--- a/views/index.jade
+++ b/views/index.jade
@@ -1,2 +1,3 @@
-script(rel='stylesheet', src="/javascripts/libs-" + assets.libs + ".js", async="async")
-script(rel='stylesheet', src="/javascripts/app-" + assets.app + ".js", async="async")
+script(type='text/javascript', src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js", async="async")
+script(type='text/javascript', src="//cdnjs.cloudflare.com/ajax/libs/jq-console/2.7.7/jqconsole.min.js", async="async")
+script(type='text/javascript', src="/js/app-0004.js", async="async")
