--- a/views/index.jade
+++ b/views/index.jade
@@ -1,3 +1,2 @@
-script(type='text/javascript', src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js", async="async")
 script(type='text/javascript', src="//cdnjs.cloudflare.com/ajax/libs/jq-console/2.7.7/jqconsole.min.js", async="async")
-script(type='text/javascript', src="/js/app-0004.js", async="async")
+script(type='text/javascript', src="/js/shell-0001.js", async="async")
