--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,6 +1,10 @@
-!!!
+!!! 5
 html
   head
-    title= title
+    title= pjson.name + ' - v' + pjson.version + ' ' + pjson.milestone
     link(rel='stylesheet', href='/css/style.css')
+    script
+        var global_version = 'v#{pjson.version} ' + '#{pjson.milestone}';
   body!= body
+  script(type='text/javascript', src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js", async="async")
+
