--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,5 +6,4 @@ html
     script
         var global_version = 'v#{pjson.version} ' + '#{pjson.milestone}';
   body!= body
-  script(type='text/javascript', src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js", async="async")
-
+  block scripts
